Moved shader processing to background thread